--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -23,11 +23,7 @@ body {
     padding: 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-    transition: .5s    
-}
-
-a {
-    text-decoration: none
+    transition: .5s
 }
 
 .header {
@@ -90,7 +86,8 @@ a {
     grid-template-columns: max-content max-content;
     align-items: center;
     column-gap: 1rem;
-    padding: .5rem 0 .5rem 1.5rem
+    padding: .5rem 0 .5rem 1.5rem;
+    text-decoration: none;
 }
 
 .nav_logo {
@@ -122,12 +119,32 @@ a {
     font-size: 1.25rem
 }
 
+.nav_logout {
+    position: relative;
+    color: var(--first-color-light);
+    margin-bottom: 1.5rem;
+    transition: .3s;
+    border: none;
+    background: none;
+    cursor: pointer;
+    outline: none;
+    display: grid;
+    grid-template-columns: max-content max-content;
+    align-items: center;
+    column-gap: 1rem;
+    padding: .5rem 0 .5rem 1.5rem
+}
+
+.nav_logout:hover {
+    color: var(--white-color)
+}
+
 .show {
     left: 0
 }
 
 .body-pd {
-    
+
     padding-left: calc(var(--nav-width) + 1rem)
 }
 
@@ -168,9 +185,10 @@ section p {
     margin-bottom: 15px;
 }
 
-section img{
+section img {
     height: 60%;
 }
+
 @media screen and (min-width: 768px) {
     body {
         margin: calc(var(--header-height) + 1rem) 0 0 0;
